removed datastore to prms-datastore to prepare for addition of additional datastores

--- a/geoserver/pom.xml
+++ b/geoserver/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>gov.usgs.cida.lkm</groupId>
-            <artifactId>lkm-datastore</artifactId>
+            <artifactId>prms-datastore</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
