--- a/netcdf-dsg-datastore/pom.xml
+++ b/netcdf-dsg-datastore/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>gt-shapefile</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>datastore-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
