--- a/multi-dbf-datastore/pom.xml
+++ b/multi-dbf-datastore/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>gt-shapefile</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>datastore-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
