added filter to geoserver to add "Access-Control-Allow-Origin" HTTP response header

--- a/geoserver/src/main/webapp/WEB-INF/web.xml
+++ b/geoserver/src/main/webapp/WEB-INF/web.xml
@@ -26,5 +26,13 @@
 </project>
 
 -->
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"/>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+    <filter>
+        <filter-name>AllowCrossOriginFilter</filter-name>
+        <filter-class>gov.usgs.cida.geoserver.AllowCrossOriginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AllowCrossOriginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+</web-app>
