--- a/geoserver/pom.xml
+++ b/geoserver/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -82,6 +87,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.2</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>exploded</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <overlays>
                         <overlay>
@@ -94,19 +107,52 @@
                                 <exclude>WEB-INF/lib/log4j12-1.2.14.jar</exclude>
                                 <exclude>WEB-INF/lib/jdom-1.0.jar</exclude>
                                 <!--<exclude>WEB-INF/lib/je-4.1.10.jar</exclude>-->
+                                <!-- we use WEB-INF/web.xml as source for transform below,
+                                     don't allow copy as it will overwrite transformed result -->
+                                <exclude>WEB-INF/web.xml</exclude>
                             </excludes>
                         </overlay>
                     </overlays>
-<!-- This file, which sets the Java EE version to 5, is required for Netbeans to
-    offer Java EE 5 containers (servers) to the list of available servers available
-    to execute the war.  If this file is missing the default Java EE version is
-    assumed to be Java EE 6 and containers such as Apache Tomcat 6.0 can't be 
-    selected.  This empty file is placed here so netbeans can identify the project
-    as a Java EE 5 project.  We don't want to include this in the final war as 
-    it's presense will preclude the use of the WEB-INF/web.xml in the war we are
-    overlaying. -->
                    <warSourceExcludes>WEB-INF/web.xml</warSourceExcludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>xml-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>transform</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <transformationSets>
+                        <transformationSet>
+                            <dir>target/war/work/org.geoserver/geoserver/WEB-INF</dir>
+                            <includes>
+                                <include>web.xml</include>
+                            </includes>
+                            <stylesheet>src/main/xsl/merge.xsl</stylesheet>
+                            <parameters>
+                                <parameter>
+                                    <name>includeFile</name>
+                                    <value>${basedir}/src/main/webapp/WEB-INF/web.xml</value>
+                                </parameter>
+                            </parameters>
+                            <outputDir>target/${project.build.finalName}/WEB-INF</outputDir>
+                        </transformationSet>
+                    </transformationSets>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.sf.saxon</groupId>
+                        <artifactId>saxon</artifactId>
+                        <version>8.7</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
