--- a/geoserver/pom.xml
+++ b/geoserver/pom.xml
@@ -50,10 +50,20 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>lkm-wps</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.geoserver</groupId>
             <artifactId>geoserver</artifactId>
             <version>${geoserver.version}</version>
             <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.geoserver.extension</groupId>
+            <artifactId>web-wps</artifactId>
+            <version>${geoserver.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
