--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>gov.usgs.cida.lkm</groupId>
-    <artifactId>lkm</artifactId>
+    <groupId>gov.usgs.cida.glri</groupId>
+    <artifactId>glri</artifactId>
     <packaging>pom</packaging>
     <version>1-SNAPSHOT</version>
     
-    <name>LKM</name>
+    <name>GLRI</name>
     
     <modules>
         <module>datastore-util</module>
