--- a/wps/pom.xml
+++ b/wps/pom.xml
@@ -4,16 +4,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>gov.usgs.cida.lkm</groupId>
-        <artifactId>lkm</artifactId>
+        <groupId>gov.usgs.cida.glri</groupId>
+        <artifactId>glri</artifactId>
         <version>1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>lkm-wps</artifactId>
+    <artifactId>glri-wps</artifactId>
     <packaging>jar</packaging>
 
-    <name>LKM WPS Processes</name>
+    <name>GLRI WPS Processes</name>
     
     <dependencies>
         <dependency>
