--- a/multi-dbf-datastore/pom.xml
+++ b/multi-dbf-datastore/pom.xml
@@ -5,9 +5,8 @@
 
     <parent>
         <groupId>gov.usgs.cida.glri</groupId>
-        <artifactId>glri</artifactId>
+        <artifactId>glri-geoserver-parent</artifactId>
         <version>1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>multi-dbf-datastore</artifactId>
