--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <geoserver.version>2.2.5</geoserver.version>
+        <geoserver.version>2.3.2</geoserver.version>
         <thredds.version>4.3.16</thredds.version>
     </properties>
 
@@ -77,6 +77,22 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+			<!-- it appears some geoserver children aren't picking this up? -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.1</version>
+            </dependency>
+			<dependency>
+				<groupId>org.geoserver.extension</groupId>
+				<artifactId>wps-core</artifactId>
+				<version>${geoserver.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.geoserver.extension</groupId>
+				<artifactId>web-wps</artifactId>
+				<version>${geoserver.version}</version>
+			</dependency>
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
