--- a/wps/pom.xml
+++ b/wps/pom.xml
@@ -43,7 +43,11 @@
         <dependency>
             <groupId>org.geoserver.extension</groupId>
             <artifactId>wps-core</artifactId>
-            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geoserver.extension</groupId>
+            <artifactId>web-wps</artifactId>
+			<scope>runtime</scope>
         </dependency>
     </dependencies>
 
