--- a/demo2/pom.xml
+++ b/demo2/pom.xml
@@ -9,10 +9,10 @@
     <version>1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>demo-ui</artifactId>
+  <artifactId>demo2</artifactId>
   <packaging>war</packaging>
 
-  <name>GLRI Demo UI</name>
+  <name>GLRI Demo UI 2</name>
   
     <repositories>
       <repository>
