--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
         <module>multi-dbf-datastore</module>
         <module>wps</module>
         <module>geoserver</module>
-        <module>demo-ui</module>
+        <module>demo1</module>
+        <module>demo2</module>
     </modules>
     
     <properties>
