--- a/geoserver/pom.xml
+++ b/geoserver/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>gov.usgs.cida.glri</groupId>
         <artifactId>glri-geoserver-parent</artifactId>
-        <version>1.0.0.0</version>
+        <version>1.0.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>glri-geoserver</artifactId>
