--- a/datastore-util/pom.xml
+++ b/datastore-util/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>gov.usgs.cida.glri</groupId>
         <artifactId>glri-geoserver-parent</artifactId>
-        <version>1.0.0.1-SNAPSHOT</version>
+        <version>1.0.0.1</version>
     </parent>
 
     <artifactId>datastore-util</artifactId>
