--- a/prms-datastore/pom.xml
+++ b/prms-datastore/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>gov.usgs.cida.glri</groupId>
         <artifactId>glri-geoserver-parent</artifactId>
-        <version>1.0.0.1</version>
+        <version>1.0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>prms-datastore</artifactId>
