--- a/wps/pom.xml
+++ b/wps/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>gov.usgs.cida.glri</groupId>
         <artifactId>glri-geoserver-parent</artifactId>
-        <version>1.0.0.2</version>
+        <version>1.1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>glri-wps</artifactId>
