--- a/multi-dbf-datastore/pom.xml
+++ b/multi-dbf-datastore/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>gov.usgs.cida.glri</groupId>
         <artifactId>glri-geoserver-parent</artifactId>
-        <version>1.1.0.0-SNAPSHOT</version>
+        <version>1.1.0.0</version>
     </parent>
 
     <artifactId>multi-dbf-datastore</artifactId>
