--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>gov.usgs.cida.glri</groupId>
     <artifactId>glri-geoserver-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.0.0</version>
+    <version>1.1.0.1-SNAPSHOT</version>
 
     <name>GLRI GeoServer Parent</name>
 
