watersmart-485; new project, adding .gitignore entries for eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 **/nb-configuration.xml
 **/nbactions.xml
 **/netbeans/
+.settings/
+.project
+.classpath
+**/.settings 
+**/.project
+**/.classpath
